# SolsticeProtocol

./: .gitignore  API.md  AUDIT_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  MONITORING.md  POSEIDON_INTEGRATION_COMPLETE.md  README.md  SECURITY.md  TESTING_GUIDE.md  WHITEPAPER.md  package.json
.github/: dependabot.yml
.github/workflows/: azure-deploy.yml  pr-checks.yml
backend/: .env.example  .eslintrc.json  .gitignore  package-lock.json  package.json  test-auth.ts
backend/db/: schema.sql
backend/src/: index.js
backend/src/db/: connection.js  queries.js  schema.sql
backend/src/middleware/: rateLimiter.js  validation.js
backend/src/routes/: auth.js  challenges.js  identity.js  proof.js
backend/src/utils/: aadhaar.js  crypto.js  env.js  jwt.js  logger.js  redis.js  session.js  zkproof.js
circuits/: .gitignore  README.md  age_proof.circom  nationality_proof.circom  package-lock.json  package.json  uniqueness_proof.circom
circuits/scripts/: export_verification_keys.js  generate_rust_vkeys.js  test_age_proof.js
contracts/: Anchor.toml  package-lock.json  package.json
contracts/programs/contracts/: Cargo.toml
contracts/programs/contracts/src/: compression.rs  errors.rs  groth16_verifier.rs  instructions.rs  lib.rs  state.rs  verification_keys.rs
contracts/scripts/: calculate-discriminator.ts  check-identity-exists.ts  diagnose-program.ts  initialize-registry.ts
contracts/tests/: contracts.ts
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/public/circuits/: age_proof_final.zkey  age_proof_verification_key.json  nationality_proof_final.zkey  nationality_proof_verification_key.json  uniqueness_proof_final.zkey  uniqueness_proof_verification_key.json
frontend/src/: App.css  App.tsx  fonts.css
frontend/src/components/: Dashboard.tsx  IdentityStatus.tsx  (+2 more)
(+6 files in other folders)
