[package]
name = "contracts"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "contracts"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.30.1"
groth16-solana = "0.2.0"
# Light Protocol ZK Compression with Poseidon hash for production ZK circuits
light-sdk = "0.13.0"
light-poseidon = "0.2.0"
solana-program = "1.18"
# Arkworks for BN254 field elements and Poseidon implementation
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"

