[package]
name = "contracts"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "contracts"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.30.1"
groth16-solana = "0.2.0"
# Light Protocol ZK Compression (using Keccak for BPF compatibility, Poseidon in circuits)
light-sdk = "0.19.0"
solana-program = "1.18"

